Modulo_4_Kubernates/26_sesion/frontend-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-pod 
  namespace: frontend
spec:
  containers:
  - name: busybox 
    image: busybox:latest
    command: ["sh", "-c", "sleep 3600"]
