Modulo_4_Kubernates/26_sesion/deny-all-backend.yaml
apiVersion: networking.k8s.io/1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress 
  namespace: backend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
